client and server implemented